@@ -14,7 +14,7 @@
  *
  * Copyright 2011-2016 ForgeRock AS.
  * Portions Copyrighted 2016 Agile Digital Engineering
- * Portions Copyrighted 2017-2024 3A Systems, LLC
+ * Portions copyright 2017-2024 3A Systems, LLC
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -75,8 +75,8 @@
     <!-- Project Encoding -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Version Properties -->
-	<maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.source>8</maven.compiler.source>
     <!-- Supress checkstyle errors on legacy com.iplanet and com.sun.identity packages -->
     <checkstyleUnitTestSuppressionsLocation>checkstyle/suppressions.xml</checkstyleUnitTestSuppressionsLocation>
     <opendj.version>4.8.0</opendj.version>
@@ -155,6 +155,33 @@
       </properties>
     </profile>
     <profile>
+      <id>set-compiler-release</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <maven0.compiler.release>8</maven0.compiler.release>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <fork>true</fork>
+                <release>8</release>
+                <compilerArgs>
+                  <arg>-XDignore.symbol.file</arg>
+                  <arg>-Xlint:unchecked</arg>
+                </compilerArgs>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+    <profile>
       <id>jdk11.options</id>
       <activation>
         <jdk>[11,)</jdk>
@@ -193,6 +220,7 @@
           --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
           --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
           --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports java.base/sun.security.krb5=ALL-UNNAMED
           --add-exports java.base/sun.security.util=ALL-UNNAMED
           --add-exports java.base/sun.security.jca=ALL-UNNAMED
           --add-exports java.base/sun.security.x509=ALL-UNNAMED
@@ -1934,17 +1962,6 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <encoding>UTF-8</encoding>
-          <!-- Override Enforcer Rules for OpenAM Compilation -->
-          <compilerArgument>-Xlint:none</compilerArgument>
-          <showDeprecation>false</showDeprecation>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>3.0.0-M7</version>
@@ -2160,15 +2177,13 @@
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<fork>true</fork>
-					<compilerArgs>
-						<arg>-XDignore.symbol.file</arg>
-					</compilerArgs>
-				</configuration>
+				<version>3.13.0</version>
+                <configuration>
+                  <fork>true</fork>
+                  <compilerArgs>
+                    <arg>-XDignore.symbol.file=true</arg>
+                  </compilerArgs>
+                </configuration>
 			</plugin>
 
 			<plugin>
